@@ -3,12 +3,13 @@ Section: debian-installer
 Priority: standard
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Martin Sjogren <sjogren@debian.org>, Petter Reinholdtsen <pere@debian.org>
-Build-Depends: debhelper (>= 4.1.16), dpkg-dev (>= 1.7.0), libdebconfclient0-dev (>= 0.46), libdebian-installer4-dev (>= 0.18)
+Build-Depends: debhelper (>= 4.1.16), dpkg-dev (>= 1.7.0), libdebconfclient0-dev (>= 0.46), libdebian-installer4-dev (>= 0.18), di-packages-build (>= 0.6)
 
 Package: anna
 Architecture: any
 Depends: libc-udeb, cdebconf-udeb, retriever, archdetect
 Description: anna's not nearly apt, but for the Debian installer, it will do
+XC-Package-Type: udeb
 
 Package: load-installer
 Architecture: all
@@ -16,3 +17,4 @@ Priority: extra
 Depends: anna
 XB-installer-menu-item: 20
 Description: Load installer components
+XC-Package-Type: udeb
