@@ -7,7 +7,8 @@ anna (0.049) UNRELEASED; urgency=low
   * Bastian Blank
     - Enable support for Subarchitecure.
     - Depend against archdetect.
-    - Build-Depend against libdebian-installer4-dev (>= 0.18).
+    - Build-Depend against libdebian-installer4-dev (>= 0.18),
+      di-packages-build (>= 0.6).
 
  -- Bastian Blank <waldi@debian.org>  Sat, 17 Jan 2004 15:44:50 +0100
 
